--- a/dev/_modules/smac/utils/test_helpers.html
+++ b/dev/_modules/smac/utils/test_helpers.html
@@ -251,6 +251,7 @@
 
 
 <div class="viewcode-block" id="get_branin_config_space"><a class="viewcode-back" href="../../../apidoc/smac.utils.test_helpers.html#smac.utils.test_helpers.get_branin_config_space">[docs]</a><span class="k">def</span> <span class="nf">get_branin_config_space</span><span class="p">():</span>
+    <span class="sd">&quot;&quot;&quot;TODO&quot;&quot;&quot;</span>
     <span class="n">cs</span> <span class="o">=</span> <span class="n">ConfigurationSpace</span><span class="p">()</span>
     <span class="n">cs</span><span class="o">.</span><span class="n">add_hyperparameter</span><span class="p">(</span><span class="n">UniformFloatHyperparameter</span><span class="p">(</span><span class="s1">&#39;x&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mi">5</span><span class="p">,</span> <span class="mi">10</span><span class="p">))</span>
     <span class="n">cs</span><span class="o">.</span><span class="n">add_hyperparameter</span><span class="p">(</span><span class="n">UniformFloatHyperparameter</span><span class="p">(</span><span class="s1">&#39;y&#39;</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">15</span><span class="p">))</span>
