--- a/dev/_modules/smac/utils/util_funcs.html
+++ b/dev/_modules/smac/utils/util_funcs.html
@@ -252,7 +252,9 @@
     <span class="n">UniformFloatHyperparameter</span><span class="p">,</span> <span class="n">UniformIntegerHyperparameter</span><span class="p">,</span> <span class="n">Constant</span><span class="p">,</span> \
     <span class="n">OrdinalHyperparameter</span>
 
+
 <div class="viewcode-block" id="get_types"><a class="viewcode-back" href="../../../apidoc/smac.utils.util_funcs.html#smac.utils.util_funcs.get_types">[docs]</a><span class="k">def</span> <span class="nf">get_types</span><span class="p">(</span><span class="n">config_space</span><span class="p">,</span> <span class="n">instance_features</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;TODO&quot;&quot;&quot;</span>
     <span class="c1"># Extract types vector for rf from config space and the bounds</span>
     <span class="n">types</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">config_space</span><span class="o">.</span><span class="n">get_hyperparameters</span><span class="p">()),</span>
                      <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">uint</span><span class="p">)</span>
