--- a/dev/apidoc/smac.optimizer.pSMAC.html
+++ b/dev/apidoc/smac.optimizer.pSMAC.html
@@ -265,8 +265,8 @@
 <li><strong>run_history</strong> (<em>smac.runhistory.RunHistory</em>) – RunHistory object to be updated with run information from runhistory
 objects stored in the output directory.</li>
 <li><strong>output_dirs</strong> (<em>typing.Union</em><em>[</em><em>str</em><em>,</em><em>typing.List</em><em>[</em><em>str</em><em>]</em><em>]</em>) – List of SMAC output directories
-or Linux path expression (str) which will be casted into a list with glob.glob().
-This function will search the output directories
+or Linux path expression (str) which will be casted into a list with
+glob.glob(). This function will search the output directories
 for files matching the runhistory regular expression.</li>
 <li><strong>configuration_space</strong> (<em>ConfigSpace.ConfigurationSpace</em>) – A ConfigurationSpace object to check if loaded configurations are valid.</li>
 <li><strong>logger</strong> (<em>logging.Logger</em>) – </li>
