--- a/dev/_modules/smac/epm/random_epm.html
+++ b/dev/_modules/smac/epm/random_epm.html
@@ -260,17 +260,23 @@
 
 
 <div class="viewcode-block" id="RandomEPM"><a class="viewcode-back" href="../../../apidoc/smac.epm.random_epm.html#smac.epm.random_epm.RandomEPM">[docs]</a><span class="k">class</span> <span class="nc">RandomEPM</span><span class="p">(</span><span class="n">AbstractEPM</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;EPM which returns random values on a call to ``fit``.&quot;&quot;&quot;</span>
+    <span class="sd">&quot;&quot;&quot;EPM which returns random values on a call to ``fit``.</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">rng</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Attributes</span>
+<span class="sd">    ----------</span>
+<span class="sd">    logger : logging.Logger</span>
+<span class="sd">    rng : np.random.RandomState</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">rng</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Constructor</span>
+
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-<span class="sd">        rng : np.random.RandomState</span>
+<span class="sd">        rng: np.random.RandomState</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
-        
+
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="vm">__module__</span> <span class="o">+</span> <span class="s2">&quot;.&quot;</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">rng</span> <span class="o">=</span> <span class="n">rng</span>
 
@@ -280,10 +286,10 @@
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-<span class="sd">        X: np.ndarray (N, D)</span>
+<span class="sd">        X : np.ndarray (N, D)</span>
 <span class="sd">            Input data points. The dimensionality of X is (N, D),</span>
 <span class="sd">            with N as the number of points and D is the number of features.</span>
-<span class="sd">        Y: np.ndarray (N, 1)</span>
+<span class="sd">        Y : np.ndarray (N, 1)</span>
 <span class="sd">            The corresponding target values.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
