--- a/dev/_modules/smac/epm/rf_with_instances.html
+++ b/dev/_modules/smac/epm/rf_with_instances.html
@@ -265,55 +265,73 @@
 
 <div class="viewcode-block" id="RandomForestWithInstances"><a class="viewcode-back" href="../../../apidoc/smac.epm.rf_with_instances.html#smac.epm.rf_with_instances.RandomForestWithInstances">[docs]</a><span class="k">class</span> <span class="nc">RandomForestWithInstances</span><span class="p">(</span><span class="n">AbstractEPM</span><span class="p">):</span>
 
-    <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">    Interface to the random forest that takes instance features</span>
+    <span class="sd">&quot;&quot;&quot;Interface to the random forest that takes instance features</span>
 <span class="sd">    into account.</span>
 
-<span class="sd">    Parameters</span>
+<span class="sd">    Attributes</span>
 <span class="sd">    ----------</span>
-<span class="sd">    types: np.ndarray (D)</span>
-<span class="sd">        Specifies the number of categorical values of an input dimension where</span>
-<span class="sd">        the i-th entry corresponds to the i-th input dimension. Let&#39;s say we </span>
-<span class="sd">        have 2 dimension where the first dimension consists of 3 different</span>
-<span class="sd">        categorical choices and the second dimension is continuous than we</span>
-<span class="sd">        have to pass np.array([2, 0]). Note that we count starting from 0.</span>
-<span class="sd">    bounds: np.ndarray (D, 2)</span>
-<span class="sd">        Specifies the bounds for continuous features.</span>
-<span class="sd">    num_trees: int</span>
-<span class="sd">        The number of trees in the random forest.</span>
-<span class="sd">    do_bootstrapping: bool</span>
-<span class="sd">        Turns on / off bootstrapping in the random forest.</span>
-<span class="sd">    n_points_per_tree: int</span>
-<span class="sd">        Number of points per tree. If &lt;= 0 X.shape[0] will be used in _train(X, y) instead</span>
-<span class="sd">    ratio_features: float</span>
-<span class="sd">        The ratio of features that are considered for splitting.</span>
-<span class="sd">    min_samples_split: int</span>
-<span class="sd">        The minimum number of data points to perform a split.</span>
-<span class="sd">    min_samples_leaf: int</span>
-<span class="sd">        The minimum number of data points in a leaf.</span>
-<span class="sd">    max_depth: int</span>
-<span class="sd">        The maximum depth of a single tree.</span>
-<span class="sd">    eps_purity: float</span>
+<span class="sd">    rf_opts :</span>
+<span class="sd">        Random forest hyperparameter</span>
+<span class="sd">    n_points_per_tree : int</span>
+<span class="sd">    rf : regression.binary_rss_forest</span>
+<span class="sd">        Only available after training</span>
+<span class="sd">    hypers: list</span>
+<span class="sd">        List of random forest hyperparameters</span>
+<span class="sd">    seed : int</span>
+<span class="sd">    types : list</span>
+<span class="sd">    bounds : list</span>
+<span class="sd">    rng : np.random.RandomState</span>
+<span class="sd">    logger : logging.logger</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
-<span class="sd">    max_num_nodes: int</span>
-
-<span class="sd">    seed: int</span>
-<span class="sd">        The seed that is passed to the random_forest_run library.</span>
-<span class="sd">    &#39;&#39;&#39;</span>
-
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">types</span><span class="p">,</span> <span class="n">bounds</span><span class="p">,</span>
-                 <span class="n">num_trees</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span>
-                 <span class="n">do_bootstrapping</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-                 <span class="n">n_points_per_tree</span><span class="o">=-</span><span class="mi">1</span><span class="p">,</span>
-                 <span class="n">ratio_features</span><span class="o">=</span><span class="mf">5.</span> <span class="o">/</span> <span class="mf">6.</span><span class="p">,</span>
-                 <span class="n">min_samples_split</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span>
-                 <span class="n">min_samples_leaf</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span>
-                 <span class="n">max_depth</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span>
-                 <span class="n">eps_purity</span><span class="o">=</span><span class="mf">1e-8</span><span class="p">,</span>
-                 <span class="n">max_num_nodes</span><span class="o">=</span><span class="mi">2</span><span class="o">**</span><span class="mi">20</span><span class="p">,</span>
-                 <span class="n">seed</span><span class="o">=</span><span class="mi">42</span><span class="p">,</span>
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">types</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span>
+                 <span class="n">bounds</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span>
+                 <span class="n">num_trees</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span>
+                 <span class="n">do_bootstrapping</span><span class="p">:</span> <span class="nb">bool</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                 <span class="n">n_points_per_tree</span><span class="p">:</span> <span class="nb">int</span><span class="o">=-</span><span class="mi">1</span><span class="p">,</span>
+                 <span class="n">ratio_features</span><span class="p">:</span> <span class="nb">float</span><span class="o">=</span><span class="mf">5.</span> <span class="o">/</span> <span class="mf">6.</span><span class="p">,</span>
+                 <span class="n">min_samples_split</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span>
+                 <span class="n">min_samples_leaf</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span>
+                 <span class="n">max_depth</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span>
+                 <span class="n">eps_purity</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mf">1e-8</span><span class="p">,</span>
+                 <span class="n">max_num_nodes</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">2</span><span class="o">**</span><span class="mi">20</span><span class="p">,</span>
+                 <span class="n">seed</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">42</span><span class="p">,</span>
                  <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Constructor</span>
 
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">        types : np.ndarray (D)</span>
+<span class="sd">            Specifies the number of categorical values of an input dimension where</span>
+<span class="sd">            the i-th entry corresponds to the i-th input dimension. Let&#39;s say we</span>
+<span class="sd">            have 2 dimension where the first dimension consists of 3 different</span>
+<span class="sd">            categorical choices and the second dimension is continuous than we</span>
+<span class="sd">            have to pass np.array([2, 0]). Note that we count starting from 0.</span>
+<span class="sd">        bounds : np.ndarray (D, 2)</span>
+<span class="sd">            Specifies the bounds for continuous features.</span>
+<span class="sd">        num_trees : int</span>
+<span class="sd">            The number of trees in the random forest.</span>
+<span class="sd">        do_bootstrapping : bool</span>
+<span class="sd">            Turns on / off bootstrapping in the random forest.</span>
+<span class="sd">        n_points_per_tree : int</span>
+<span class="sd">            Number of points per tree. If &lt;= 0 X.shape[0] will be used</span>
+<span class="sd">            in _train(X, y) instead</span>
+<span class="sd">        ratio_features : float</span>
+<span class="sd">            The ratio of features that are considered for splitting.</span>
+<span class="sd">        min_samples_split : int</span>
+<span class="sd">            The minimum number of data points to perform a split.</span>
+<span class="sd">        min_samples_leaf : int</span>
+<span class="sd">            The minimum number of data points in a leaf.</span>
+<span class="sd">        max_depth : int</span>
+<span class="sd">            The maximum depth of a single tree.</span>
+<span class="sd">        eps_purity : float</span>
+<span class="sd">            The minimum difference between two target values to be considered</span>
+<span class="sd">            different</span>
+<span class="sd">        max_num_nodes : int</span>
+<span class="sd">            The maxmimum total number of nodes in a tree</span>
+<span class="sd">        seed : int</span>
+<span class="sd">            The seed that is passed to the random_forest_run library.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">types</span> <span class="o">=</span> <span class="n">types</span>
@@ -341,9 +359,10 @@
                        <span class="n">min_samples_leaf</span><span class="p">,</span> <span class="n">max_depth</span><span class="p">,</span> <span class="n">eps_purity</span><span class="p">,</span> <span class="n">seed</span><span class="p">]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">seed</span> <span class="o">=</span> <span class="n">seed</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="vm">__module__</span> <span class="o">+</span> <span class="s2">&quot;.&quot;</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="vm">__module__</span> <span class="o">+</span> <span class="s2">&quot;.&quot;</span> <span class="o">+</span>
+                                        <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="nf">_train</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">_train</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> <span class="n">y</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Trains the random forest on X and y.</span>
 
 <span class="sd">        Parameters</span>
@@ -371,8 +390,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">rf</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">rng</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">rng</span><span class="p">)</span>
         <span class="k">return</span> <span class="bp">self</span>
 
-    <span class="k">def</span> <span class="nf">__init_data_container</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Fills a pyrfr default data container, s.t. the forest knows categoricals and bounds for continous data</span>
+    <span class="k">def</span> <span class="nf">__init_data_container</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> <span class="n">y</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Fills a pyrfr default data container, s.t. the forest knows</span>
+<span class="sd">        categoricals and bounds for continous data</span>
 <span class="sd">        </span>
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
@@ -383,7 +403,7 @@
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
-<span class="sd">        data: regression.default_data_container</span>
+<span class="sd">        data : regression.default_data_container</span>
 <span class="sd">            The filled data container that pyrfr can interpret</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># retrieve the types and the bounds from the ConfigSpace</span>
@@ -399,12 +419,13 @@
             <span class="n">data</span><span class="o">.</span><span class="n">add_data_point</span><span class="p">(</span><span class="n">row_X</span><span class="p">,</span> <span class="n">row_y</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">data</span>
 
-    <span class="k">def</span> <span class="nf">_predict</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">_predict</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Predict means and variances for given X.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-<span class="sd">        X : np.ndarray of shape = [n_samples, n_features (config + instance features)]</span>
+<span class="sd">        X : np.ndarray of shape = [n_samples,</span>
+<span class="sd">                                   n_features (config + instance features)]</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
