--- a/dev/_modules/smac/facade/func_facade.html
+++ b/dev/_modules/smac/facade/func_facade.html
@@ -253,7 +253,6 @@
 <span class="kn">from</span> <span class="nn">smac.facade.smac_facade</span> <span class="k">import</span> <span class="n">SMAC</span>
 <span class="kn">from</span> <span class="nn">smac.scenario.scenario</span> <span class="k">import</span> <span class="n">Scenario</span>
 <span class="kn">from</span> <span class="nn">smac.configspace</span> <span class="k">import</span> <span class="n">ConfigurationSpace</span>
-<span class="kn">from</span> <span class="nn">smac.optimizer.objective</span> <span class="k">import</span> <span class="n">average_cost</span>
 <span class="kn">from</span> <span class="nn">smac.runhistory.runhistory</span> <span class="k">import</span> <span class="n">RunKey</span>
 <span class="kn">from</span> <span class="nn">smac.tae.execute_func</span> <span class="k">import</span> <span class="n">ExecuteTAFuncArray</span>
 
@@ -270,8 +269,7 @@
               <span class="n">maxfun</span><span class="p">:</span> <span class="nb">int</span><span class="o">=-</span><span class="mi">1</span><span class="p">,</span>
               <span class="n">maxtime</span><span class="p">:</span> <span class="nb">int</span><span class="o">=-</span><span class="mi">1</span><span class="p">,</span>
               <span class="n">rng</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Minimize a function func using the SMAC algorithm.</span>
-
+    <span class="sd">&quot;&quot;&quot; Minimize a function func using the SMAC algorithm.</span>
 <span class="sd">    This function is a convenience wrapper for the SMAC class.</span>
 
 <span class="sd">    Parameters</span>
@@ -300,9 +298,6 @@
 <span class="sd">        SMAC objects which enables the user to get</span>
 <span class="sd">        e.g., the trajectory and runhistory.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-
-    <span class="n">aggregate_func</span> <span class="o">=</span> <span class="n">average_cost</span>
-
     <span class="c1"># create configuration space</span>
     <span class="n">cs</span> <span class="o">=</span> <span class="n">ConfigurationSpace</span><span class="p">()</span>
     <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="p">(</span><span class="n">lower_bound</span><span class="p">,</span> <span class="n">upper_bound</span><span class="p">)</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">bounds</span><span class="p">):</span>
@@ -316,8 +311,8 @@
     <span class="n">ta</span> <span class="o">=</span> <span class="n">ExecuteTAFuncArray</span><span class="p">(</span><span class="n">ta</span><span class="o">=</span><span class="n">func</span><span class="p">)</span>
 
     <span class="c1"># create scenario</span>
-    <span class="n">scenario_dict</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;run_obj&quot;</span><span class="p">:</span> <span class="s2">&quot;quality&quot;</span><span class="p">,</span>  <span class="c1"># we optimize quality</span>
-                     <span class="s2">&quot;cs&quot;</span><span class="p">:</span> <span class="n">cs</span><span class="p">,</span>  <span class="c1"># configuration space</span>
+    <span class="n">scenario_dict</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;run_obj&quot;</span><span class="p">:</span> <span class="s2">&quot;quality&quot;</span><span class="p">,</span>
+                     <span class="s2">&quot;cs&quot;</span><span class="p">:</span> <span class="n">cs</span><span class="p">,</span>
                      <span class="s2">&quot;deterministic&quot;</span><span class="p">:</span> <span class="s2">&quot;true&quot;</span><span class="p">,</span>
                      <span class="s2">&quot;initial_incumbent&quot;</span><span class="p">:</span> <span class="s2">&quot;DEFAULT&quot;</span>
                      <span class="p">}</span>
