--- a/dev/_modules/smac/initial_design/initial_design.html
+++ b/dev/_modules/smac/initial_design/initial_design.html
@@ -254,7 +254,6 @@
 <span class="kn">from</span> <span class="nn">smac.stats.stats</span> <span class="k">import</span> <span class="n">Stats</span>
 <span class="kn">from</span> <span class="nn">smac.utils.io.traj_logging</span> <span class="k">import</span> <span class="n">TrajLogger</span>
 <span class="kn">from</span> <span class="nn">smac.scenario.scenario</span> <span class="k">import</span> <span class="n">Scenario</span>
-<span class="kn">from</span> <span class="nn">smac.runhistory.runhistory</span> <span class="k">import</span> <span class="n">RunHistory</span>
 
 <span class="n">__author__</span> <span class="o">=</span> <span class="s2">&quot;Marius Lindauer&quot;</span>
 <span class="n">__copyright__</span> <span class="o">=</span> <span class="s2">&quot;Copyright 2016, ML4AAD&quot;</span>
@@ -262,6 +261,19 @@
 
 
 <div class="viewcode-block" id="InitialDesign"><a class="viewcode-back" href="../../../apidoc/smac.initial_design.initial_design.html#smac.initial_design.initial_design.InitialDesign">[docs]</a><span class="k">class</span> <span class="nc">InitialDesign</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot; Base class for initial designs, i.e. the configurations that are run</span>
+<span class="sd">    before optimization starts</span>
+
+<span class="sd">    Attributes</span>
+<span class="sd">    ----------</span>
+<span class="sd">    tae_runner : ExecuteTARun</span>
+<span class="sd">        Target algorithm runner that will be used to run the initial design</span>
+<span class="sd">    scenario</span>
+<span class="sd">    stats</span>
+<span class="sd">    traj_logger</span>
+<span class="sd">    rng</span>
+<span class="sd">    logger</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span>
                  <span class="n">tae_runner</span><span class="p">:</span> <span class="n">ExecuteTARun</span><span class="p">,</span>
@@ -270,23 +282,23 @@
                  <span class="n">traj_logger</span><span class="p">:</span> <span class="n">TrajLogger</span><span class="p">,</span>
                  <span class="n">rng</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span>
                  <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Arguments</span>
+        <span class="sd">&quot;&quot;&quot;Constructor</span>
+
+<span class="sd">        Parameters</span>
 <span class="sd">        ---------</span>
 <span class="sd">        tae_runner: ExecuteTARun</span>
 <span class="sd">            Target algorithm execution object.</span>
 <span class="sd">        scenario: Scenario</span>
 <span class="sd">            Scenario with all meta information (including configuration space).</span>
 <span class="sd">        stats: Stats</span>
-<span class="sd">            Statistics of experiments; needed in case initial design already </span>
+<span class="sd">            Statistics of experiments; needed in case initial design already</span>
 <span class="sd">            exhausts the budget.</span>
 <span class="sd">        traj_logger: TrajLogger</span>
-<span class="sd">            Trajectory logging to add new incumbents found by the initial </span>
+<span class="sd">            Trajectory logging to add new incumbents found by the initial</span>
 <span class="sd">            design.</span>
 <span class="sd">        rng: np.random.RandomState</span>
 <span class="sd">            Random state</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-
         <span class="bp">self</span><span class="o">.</span><span class="n">tae_runner</span> <span class="o">=</span> <span class="n">tae_runner</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">scenario</span> <span class="o">=</span> <span class="n">scenario</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">stats</span> <span class="o">=</span> <span class="n">stats</span>
@@ -295,8 +307,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="vm">__module__</span> <span class="o">+</span> <span class="s2">&quot;.&quot;</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="p">)</span>
 
 <div class="viewcode-block" id="InitialDesign.run"><a class="viewcode-back" href="../../../apidoc/smac.initial_design.initial_design.html#smac.initial_design.initial_design.InitialDesign.run">[docs]</a>    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Run the initial design.</span>
+        <span class="sd">&quot;&quot;&quot;Run the initial design.</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
