--- a/dev/_modules/smac/scenario/scenario.html
+++ b/dev/_modules/smac/scenario/scenario.html
@@ -283,23 +283,26 @@
 
 <div class="viewcode-block" id="Scenario"><a class="viewcode-back" href="../../../apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario">[docs]</a><span class="k">class</span> <span class="nc">Scenario</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 
-    <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">    Scenario contains the configuration of the optimization process</span>
-<span class="sd">    &#39;&#39;&#39;</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Scenario contains the configuration of the optimization process and</span>
+<span class="sd">    constructs a scenario object from a file or dictionary.</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scenario</span><span class="p">,</span> <span class="n">cmd_args</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">run_id</span><span class="o">=</span><span class="mi">1</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Construct scenario object from file or dictionary.</span>
+<span class="sd">    All arguments set in the Scenario are set as attributes.</span>
+
+<span class="sd">    &quot;&quot;&quot;</span>
+
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scenario</span><span class="p">,</span> <span class="n">cmd_args</span><span class="p">:</span> <span class="nb">dict</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">run_id</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">1</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Constructor</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
 <span class="sd">        scenario : str or dict</span>
-<span class="sd">            if str, it will be interpreted as to a path a scenario file</span>
-<span class="sd">            if dict, it will be directly to get all scenario related information</span>
+<span class="sd">            If str, it will be interpreted as to a path a scenario file</span>
+<span class="sd">            If dict, it will be directly to get all scenario related information</span>
 <span class="sd">        cmd_args : dict</span>
-<span class="sd">            command line arguments that were not processed by argparse</span>
+<span class="sd">            Command line arguments that were not processed by argparse</span>
 <span class="sd">        run_id: int</span>
-<span class="sd">            run ID will be used as suffix for output_dir</span>
-
+<span class="sd">            Run ID will be used as suffix for output_dir</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="vm">__module__</span> <span class="o">+</span> <span class="s1">&#39;.&#39;</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="p">)</span>
@@ -365,8 +368,9 @@
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">arg_value</span><span class="p">,(</span><span class="nb">int</span><span class="p">,</span><span class="nb">str</span><span class="p">,</span><span class="nb">float</span><span class="p">)):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">%s</span><span class="s2"> = </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span><span class="p">(</span><span class="n">arg_name</span><span class="p">,</span><span class="n">arg_value</span><span class="p">))</span>
 
-<div class="viewcode-block" id="Scenario.add_argument"><a class="viewcode-back" href="../../../apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.add_argument">[docs]</a>    <span class="k">def</span> <span class="nf">add_argument</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">help</span><span class="p">,</span> <span class="n">callback</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-                     <span class="n">dest</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">required</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">mutually_exclusive_group</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+<div class="viewcode-block" id="Scenario.add_argument"><a class="viewcode-back" href="../../../apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.add_argument">[docs]</a>    <span class="k">def</span> <span class="nf">add_argument</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">help</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">callback</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+                     <span class="n">dest</span><span class="p">:</span> <span class="nb">str</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">required</span><span class="p">:</span> <span class="nb">bool</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+                     <span class="n">mutually_exclusive_group</span><span class="p">:</span> <span class="nb">str</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                      <span class="n">choice</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Add argument to the scenario object.</span>
 
@@ -392,6 +396,8 @@
 <span class="sd">            given. Is used for example to ensure that either a configuration</span>
 <span class="sd">            space object or a parameter file is passed to the scenario. Can not</span>
 <span class="sd">            be used together with ``required``.</span>
+<span class="sd">        choice: list/set/tuple</span>
+<span class="sd">            List of possible string for this argument</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">required</span><span class="p">,</span> <span class="nb">bool</span><span class="p">):</span>
             <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span><span class="s2">&quot;Argument &#39;required&#39; must be of type &#39;bool&#39;.&quot;</span><span class="p">)</span>
@@ -411,8 +417,9 @@
         <span class="k">if</span> <span class="n">mutually_exclusive_group</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_groups</span><span class="p">[</span><span class="n">mutually_exclusive_group</span><span class="p">]</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">name</span><span class="p">)</span></div>
 
-    <span class="k">def</span> <span class="nf">_parse_argument</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">scenario</span><span class="p">,</span> <span class="n">help</span><span class="p">,</span> <span class="n">callback</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-                        <span class="n">dest</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">required</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">choice</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">_parse_argument</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">scenario</span><span class="p">:</span> <span class="nb">dict</span><span class="p">,</span> <span class="n">help</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+                        <span class="n">callback</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+                        <span class="n">dest</span><span class="p">:</span> <span class="nb">str</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">required</span><span class="p">:</span> <span class="nb">bool</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">choice</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Search the scenario dict for a single allowed argument and parse it.</span>
 
 <span class="sd">        Side effect: the argument is removed from the scenario dict if found.</span>
@@ -479,6 +486,7 @@
         <span class="k">return</span> <span class="n">dest</span><span class="p">,</span> <span class="n">value</span>
 
     <span class="k">def</span> <span class="nf">_add_arguments</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;TODO&quot;&quot;&quot;</span>
         <span class="c1"># Add allowed arguments</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;abort_on_first_run_crash&#39;</span><span class="p">,</span>
                           <span class="n">help</span><span class="o">=</span><span class="s2">&quot;If true, *SMAC* will abort if the first run of &quot;</span>
@@ -582,6 +590,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s1">&#39;cs&#39;</span><span class="p">,</span> <span class="n">help</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">mutually_exclusive_group</span><span class="o">=</span><span class="s1">&#39;cs&#39;</span><span class="p">)</span>
 
     <span class="k">def</span> <span class="nf">_transform_arguments</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;TODO&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">n_features</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">feature_dict</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">feature_array</span> <span class="o">=</span> <span class="kc">None</span>
 
@@ -697,14 +706,13 @@
         <span class="k">return</span> <span class="n">l</span>
 
 <div class="viewcode-block" id="Scenario.write_options_to_doc"><a class="viewcode-back" href="../../../apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.write_options_to_doc">[docs]</a>    <span class="k">def</span> <span class="nf">write_options_to_doc</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">path</span><span class="o">=</span><span class="s1">&#39;scenario_options.rst&#39;</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Writes the option-list to file for autogeneration in documentation.</span>
+        <span class="sd">&quot;&quot;&quot;Writes the option-list to file for autogeneration in documentation.</span>
 <span class="sd">        The list is created in doc/conf.py and read in doc/options.rst.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
 <span class="sd">        path: string</span>
-<span class="sd">            where to write to (relative to doc-folder since executed in conf.py)</span>
+<span class="sd">            Where to write to (relative to doc-folder since executed in conf.py)</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">exclude</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;cs&#39;</span><span class="p">,</span> <span class="s1">&#39;features&#39;</span><span class="p">,</span> <span class="s1">&#39;instances&#39;</span><span class="p">,</span> <span class="s1">&#39;test_instances&#39;</span><span class="p">]</span>
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">path</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">fh</span><span class="p">:</span>
