--- a/dev/_modules/smac/tae/execute_func.html
+++ b/dev/_modules/smac/tae/execute_func.html
@@ -267,7 +267,11 @@
 <div class="viewcode-block" id="AbstractTAFunc"><a class="viewcode-back" href="../../../apidoc/smac.tae.execute_func.html#smac.tae.execute_func.AbstractTAFunc">[docs]</a><span class="k">class</span> <span class="nc">AbstractTAFunc</span><span class="p">(</span><span class="n">ExecuteTARun</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Baseclass to execute target algorithms which are python functions.</span>
 
-<span class="sd">    DO NOT USE DIRECTLY.</span>
+<span class="sd">    **Note:*** Do not use directly</span>
+
+<span class="sd">    Attributes</span>
+<span class="sd">    ----------</span>
+<span class="sd">    memory_limit</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ta</span><span class="p">,</span> <span class="n">stats</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">runhistory</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">run_obj</span><span class="o">=</span><span class="s2">&quot;quality&quot;</span><span class="p">,</span>
@@ -276,6 +280,9 @@
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">ta</span><span class="o">=</span><span class="n">ta</span><span class="p">,</span> <span class="n">stats</span><span class="o">=</span><span class="n">stats</span><span class="p">,</span> <span class="n">runhistory</span><span class="o">=</span><span class="n">runhistory</span><span class="p">,</span>
                          <span class="n">run_obj</span><span class="o">=</span><span class="n">run_obj</span><span class="p">,</span> <span class="n">par_factor</span><span class="o">=</span><span class="n">par_factor</span><span class="p">,</span>
                          <span class="n">cost_for_crash</span><span class="o">=</span><span class="n">cost_for_crash</span><span class="p">)</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        TODO</span>
+<span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="n">signature</span> <span class="o">=</span> <span class="n">inspect</span><span class="o">.</span><span class="n">signature</span><span class="p">(</span><span class="n">ta</span><span class="p">)</span><span class="o">.</span><span class="n">parameters</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_accepts_seed</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">signature</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">1</span>
@@ -285,49 +292,44 @@
             <span class="n">memory_limit</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">math</span><span class="o">.</span><span class="n">ceil</span><span class="p">(</span><span class="n">memory_limit</span><span class="p">))</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">memory_limit</span> <span class="o">=</span> <span class="n">memory_limit</span>
 
-
 <div class="viewcode-block" id="AbstractTAFunc.run"><a class="viewcode-back" href="../../../apidoc/smac.tae.execute_func.html#smac.tae.execute_func.AbstractTAFunc.run">[docs]</a>    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">config</span><span class="p">,</span> <span class="n">instance</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
             <span class="n">cutoff</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
             <span class="n">seed</span><span class="o">=</span><span class="mi">12345</span><span class="p">,</span>
             <span class="n">instance_specific</span><span class="o">=</span><span class="s2">&quot;0&quot;</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Runs target algorithm &lt;self.ta&gt; with configuration &lt;config&gt; for at</span>
+<span class="sd">        most &lt;cutoff&gt; seconds, allowing it to use at most &lt;memory_limit&gt; RAM.</span>
 
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">            runs target algorithm &lt;self.ta&gt; with configuration &lt;config&gt; for at</span>
-<span class="sd">            most &lt;cutoff&gt; seconds, allowing it to use at most &lt;memory_limit&gt;</span>
-<span class="sd">            RAM.</span>
+<span class="sd">        Whether the target algorithm is called with the &lt;instance&gt; and</span>
+<span class="sd">        &lt;seed&gt; depends on the subclass implementing the actual call to</span>
+<span class="sd">        the target algorithm.</span>
 
-<span class="sd">            Whether the target algorithm is called with the &lt;instance&gt; and</span>
-<span class="sd">            &lt;seed&gt; depends on the subclass implementing the actual call to</span>
-<span class="sd">            the target algorithm.</span>
-
-<span class="sd">            Parameters</span>
-<span class="sd">            ----------</span>
-<span class="sd">                config : dictionary (or similar)</span>
-<span class="sd">                    dictionary param -&gt; value</span>
-<span class="sd">                instance : str</span>
-<span class="sd">                    problem instance</span>
-<span class="sd">                cutoff : int, optional</span>
-<span class="sd">                    Wallclock time limit of the target algorithm. If no value is</span>
-<span class="sd">                    provided no limit will be enforced.</span>
-<span class="sd">                memory_limit : int, optional</span>
-<span class="sd">                    Memory limit in MB enforced on the target algorithm If no</span>
-<span class="sd">                    value is provided no limit will be enforced.</span>
-<span class="sd">                seed : int</span>
-<span class="sd">                    random seed</span>
-<span class="sd">                instance_specific: str</span>
-<span class="sd">                    instance specific information (e.g., domain file or solution)</span>
-<span class="sd">            Returns</span>
-<span class="sd">            -------</span>
-<span class="sd">                status: enum of StatusType (int)</span>
-<span class="sd">                    {SUCCESS, TIMEOUT, CRASHED, ABORT}</span>
-<span class="sd">                cost: float</span>
-<span class="sd">                    cost/regret/quality/runtime (float) (None, if not returned by TA)</span>
-<span class="sd">                runtime: float</span>
-<span class="sd">                    runtime (None if not returned by TA)</span>
-<span class="sd">                additional_info: dict</span>
-<span class="sd">                    all further additional run information</span>
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">            config : dictionary (or similar)</span>
+<span class="sd">                Dictionary param -&gt; value</span>
+<span class="sd">            instance : str</span>
+<span class="sd">                Problem instance</span>
+<span class="sd">            cutoff : int, optional</span>
+<span class="sd">                Wallclock time limit of the target algorithm. If no value is</span>
+<span class="sd">                provided no limit will be enforced.</span>
+<span class="sd">            memory_limit : int, optional</span>
+<span class="sd">                Memory limit in MB enforced on the target algorithm If no</span>
+<span class="sd">                value is provided no limit will be enforced.</span>
+<span class="sd">            seed : int</span>
+<span class="sd">                Random seed</span>
+<span class="sd">            instance_specific: str</span>
+<span class="sd">                Instance specific information (e.g., domain file or solution)</span>
+<span class="sd">        Returns</span>
+<span class="sd">        -------</span>
+<span class="sd">            status: enum of StatusType (int)</span>
+<span class="sd">                {SUCCESS, TIMEOUT, CRASHED, ABORT}</span>
+<span class="sd">            cost: float</span>
+<span class="sd">                cost/regret/quality/runtime (float) (None, if not returned by TA)</span>
+<span class="sd">            runtime: float</span>
+<span class="sd">                runtime (None if not returned by TA)</span>
+<span class="sd">            additional_info: dict</span>
+<span class="sd">                all further additional run information</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-
         <span class="c1"># walltime for pynisher has to be a rounded up integer</span>
         <span class="k">if</span> <span class="n">cutoff</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="n">cutoff</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">math</span><span class="o">.</span><span class="n">ceil</span><span class="p">(</span><span class="n">cutoff</span><span class="p">))</span>
