--- a/dev/_modules/smac/tae/execute_ta_run_aclib.html
+++ b/dev/_modules/smac/tae/execute_ta_run_aclib.html
@@ -262,52 +262,40 @@
 
 <div class="viewcode-block" id="ExecuteTARunAClib"><a class="viewcode-back" href="../../../apidoc/smac.tae.execute_ta_run_aclib.html#smac.tae.execute_ta_run_aclib.ExecuteTARunAClib">[docs]</a><span class="k">class</span> <span class="nc">ExecuteTARunAClib</span><span class="p">(</span><span class="n">ExecuteTARun</span><span class="p">):</span>
 
-    <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        executes a target algorithm run with a given configuration</span>
-<span class="sd">        on a given instance and some resource limitations</span>
-<span class="sd">        Uses the AClib 2.0 style</span>
-
-<span class="sd">        Parameters</span>
-<span class="sd">        ----------</span>
-<span class="sd">        ta : string</span>
-<span class="sd">            the command line call to the target algorithm (wrapper)</span>
-<span class="sd">        run_obj: str</span>
-<span class="sd">            run objective (runtime or quality)</span>
-<span class="sd">        par_factor: int</span>
-<span class="sd">            penalized average runtime factor</span>
+    <span class="sd">&quot;&quot;&quot;Executes a target algorithm run with a given configuration on a given</span>
+<span class="sd">    instance and some resource limitations. Uses the AClib 2.0 style</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="ExecuteTARunAClib.run"><a class="viewcode-back" href="../../../apidoc/smac.tae.execute_ta_run_aclib.html#smac.tae.execute_ta_run_aclib.ExecuteTARunAClib.run">[docs]</a>    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">config</span><span class="p">,</span> <span class="n">instance</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
             <span class="n">cutoff</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
             <span class="n">seed</span><span class="o">=</span><span class="mi">12345</span><span class="p">,</span>
             <span class="n">instance_specific</span><span class="o">=</span><span class="s2">&quot;0&quot;</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">            runs target algorithm &lt;self.ta&gt; with configuration &lt;config&gt; on</span>
-<span class="sd">            instance &lt;instance&gt; with instance specifics &lt;specifics&gt;</span>
-<span class="sd">            for at most &lt;cutoff&gt; seconds and random seed &lt;seed&gt;</span>
+        <span class="sd">&quot;&quot;&quot;Runs target algorithm &lt;self.ta&gt; with configuration &lt;config&gt; on</span>
+<span class="sd">        instance &lt;instance&gt; with instance specifics &lt;specifics&gt; for at most</span>
+<span class="sd">        &lt;cutoff&gt; seconds and random seed &lt;seed&gt;</span>
 
-<span class="sd">            Parameters</span>
-<span class="sd">            ----------</span>
-<span class="sd">                config : dictionary (or similar)</span>
-<span class="sd">                    dictionary param -&gt; value</span>
-<span class="sd">                instance : string</span>
-<span class="sd">                    problem instance</span>
-<span class="sd">                cutoff : double</span>
-<span class="sd">                    runtime cutoff</span>
-<span class="sd">                seed : int</span>
-<span class="sd">                    random seed</span>
-<span class="sd">                instance_specific: str</span>
-<span class="sd">                    instance specific information -- ignored here</span>
-<span class="sd">            Returns</span>
-<span class="sd">            -------</span>
-<span class="sd">                status: enum of StatusType (int)</span>
-<span class="sd">                    {SUCCESS, TIMEOUT, CRASHED, ABORT}</span>
-<span class="sd">                cost: float</span>
-<span class="sd">                    cost/regret/quality/runtime (float) (None, if not returned by TA)</span>
-<span class="sd">                runtime: float</span>
-<span class="sd">                    runtime (None if not returned by TA)</span>
-<span class="sd">                additional_info: dict</span>
-<span class="sd">                    all further additional run information</span>
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">            config : dictionary (or similar)</span>
+<span class="sd">                Dictionary param -&gt; value</span>
+<span class="sd">            instance : string</span>
+<span class="sd">                Problem instance</span>
+<span class="sd">            cutoff : double</span>
+<span class="sd">                Runtime cutoff</span>
+<span class="sd">            seed : int</span>
+<span class="sd">                Random seed</span>
+<span class="sd">            instance_specific: str</span>
+<span class="sd">                Instance specific information -- ignored here</span>
+<span class="sd">        Returns</span>
+<span class="sd">        -------</span>
+<span class="sd">            status: enum of StatusType (int)</span>
+<span class="sd">                {SUCCESS, TIMEOUT, CRASHED, ABORT}</span>
+<span class="sd">            cost: float</span>
+<span class="sd">                cost/regret/quality/runtime (float) (None, if not returned by TA)</span>
+<span class="sd">            runtime: float</span>
+<span class="sd">                runtime (None if not returned by TA)</span>
+<span class="sd">            additional_info: dict</span>
+<span class="sd">                all further additional run information</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="k">if</span> <span class="n">instance</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -362,8 +350,8 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">stderr_</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)[</span><span class="o">-</span><span class="mi">5</span><span class="p">:]))</span>
 
         <span class="k">if</span> <span class="n">results</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;runtime&quot;</span><span class="p">)</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span>
-                <span class="s2">&quot;The target algorithm has not returned a runtime -- imputed by 0.&quot;</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s2">&quot;The target algorithm has not returned a&quot;</span>
+                             <span class="s2">&quot; runtime -- imputed by 0.&quot;</span><span class="p">)</span>
             <span class="c1"># (TODO) Check 0</span>
             <span class="n">results</span><span class="p">[</span><span class="s2">&quot;runtime&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">0</span>
 
