--- a/dev/_modules/smac/tae/execute_ta_run_old.html
+++ b/dev/_modules/smac/tae/execute_ta_run_old.html
@@ -261,19 +261,9 @@
 
 <div class="viewcode-block" id="ExecuteTARunOld"><a class="viewcode-back" href="../../../apidoc/smac.tae.execute_ta_run_old.html#smac.tae.execute_ta_run_old.ExecuteTARunOld">[docs]</a><span class="k">class</span> <span class="nc">ExecuteTARunOld</span><span class="p">(</span><span class="n">ExecuteTARun</span><span class="p">):</span>
 
-    <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        executes a target algorithm run with a given configuration</span>
-<span class="sd">        on a given instance and some resource limitations</span>
-<span class="sd">        Uses the original SMAC/PILS format (SMAC &lt; v2.10)</span>
-
-<span class="sd">        Parameters</span>
-<span class="sd">        ----------</span>
-<span class="sd">        ta : string</span>
-<span class="sd">            the command line call to the target algorithm (wrapper)</span>
-<span class="sd">        run_obj: str</span>
-<span class="sd">            run objective (runtime or quality)</span>
-<span class="sd">        par_factor: int</span>
-<span class="sd">            penalized average runtime factor</span>
+    <span class="sd">&quot;&quot;&quot;Executes a target algorithm run with a given configuration on a given</span>
+<span class="sd">    instance and some resource limitations. Uses the original SMAC/PILS format</span>
+<span class="sd">    (SMAC &lt; v2.10)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="ExecuteTARunOld.run"><a class="viewcode-back" href="../../../apidoc/smac.tae.execute_ta_run_old.html#smac.tae.execute_ta_run_old.ExecuteTARunOld.run">[docs]</a>    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">config</span><span class="p">,</span> <span class="n">instance</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
@@ -281,33 +271,32 @@
             <span class="n">seed</span><span class="o">=</span><span class="mi">12345</span><span class="p">,</span>
             <span class="n">instance_specific</span><span class="o">=</span><span class="s2">&quot;0&quot;</span>
             <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">            runs target algorithm &lt;self.ta&gt; with configuration &lt;config&gt; on</span>
-<span class="sd">            instance &lt;instance&gt; with instance specifics &lt;specifics&gt;</span>
-<span class="sd">            for at most &lt;cutoff&gt; seconds and random seed &lt;seed&gt;</span>
+        <span class="sd">&quot;&quot;&quot;Runs target algorithm &lt;self.ta&gt; with configuration &lt;config&gt; on</span>
+<span class="sd">        instance &lt;instance&gt; with instance specifics &lt;specifics&gt; for at most</span>
+<span class="sd">        &lt;cutoff&gt; seconds and random seed &lt;seed&gt;</span>
 
-<span class="sd">            Parameters</span>
-<span class="sd">            ----------</span>
-<span class="sd">                config : dictionary (or similar)</span>
-<span class="sd">                    dictionary param -&gt; value</span>
-<span class="sd">                instance : string</span>
-<span class="sd">                    problem instance</span>
-<span class="sd">                cutoff : double</span>
-<span class="sd">                    runtime cutoff</span>
-<span class="sd">                seed : int</span>
-<span class="sd">                    random seed</span>
-<span class="sd">                instance_specific: str</span>
-<span class="sd">                    instance specific information (e.g., domain file or solution)</span>
-<span class="sd">            Returns</span>
-<span class="sd">            -------</span>
-<span class="sd">                status: enum of StatusType (int)</span>
-<span class="sd">                    {SUCCESS, TIMEOUT, CRASHED, ABORT}</span>
-<span class="sd">                cost: float</span>
-<span class="sd">                    cost/regret/quality/runtime (float) (None, if not returned by TA)</span>
-<span class="sd">                runtime: float</span>
-<span class="sd">                    runtime (None if not returned by TA)</span>
-<span class="sd">                additional_info: dict</span>
-<span class="sd">                    all further additional run information</span>
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">            config : dictionary (or similar)</span>
+<span class="sd">                Dictionary param -&gt; value</span>
+<span class="sd">            instance : string</span>
+<span class="sd">                Problem instance</span>
+<span class="sd">            cutoff : double</span>
+<span class="sd">                Runtime cutoff</span>
+<span class="sd">            seed : int</span>
+<span class="sd">                Random seed</span>
+<span class="sd">            instance_specific: str</span>
+<span class="sd">                Instance specific information (e.g., domain file or solution)</span>
+<span class="sd">        Returns</span>
+<span class="sd">        -------</span>
+<span class="sd">            status: enum of StatusType (int)</span>
+<span class="sd">                {SUCCESS, TIMEOUT, CRASHED, ABORT}</span>
+<span class="sd">            cost: float</span>
+<span class="sd">                cost/regret/quality/runtime (float) (None, if not returned by TA)</span>
+<span class="sd">            runtime: float</span>
+<span class="sd">                runtime (None if not returned by TA)</span>
+<span class="sd">            additional_info: dict</span>
+<span class="sd">                all further additional run information</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="k">if</span> <span class="n">instance</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -325,7 +314,8 @@
                 <span class="n">cmd</span><span class="o">.</span><span class="n">extend</span><span class="p">([</span><span class="s2">&quot;-&quot;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">p</span><span class="p">),</span> <span class="nb">str</span><span class="p">(</span><span class="n">config</span><span class="p">[</span><span class="n">p</span><span class="p">])])</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Calling: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="s2">&quot; &quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">cmd</span><span class="p">)))</span>
-        <span class="n">p</span> <span class="o">=</span> <span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">,</span> <span class="n">shell</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">stdout</span><span class="o">=</span><span class="n">PIPE</span><span class="p">,</span> <span class="n">stderr</span><span class="o">=</span><span class="n">PIPE</span><span class="p">,</span> <span class="n">universal_newlines</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+        <span class="n">p</span> <span class="o">=</span> <span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">,</span> <span class="n">shell</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">stdout</span><span class="o">=</span><span class="n">PIPE</span><span class="p">,</span> <span class="n">stderr</span><span class="o">=</span><span class="n">PIPE</span><span class="p">,</span>
+                  <span class="n">universal_newlines</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
         <span class="n">stdout_</span><span class="p">,</span> <span class="n">stderr_</span> <span class="o">=</span> <span class="n">p</span><span class="o">.</span><span class="n">communicate</span><span class="p">()</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Stdout: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">stdout_</span><span class="p">))</span>
@@ -336,7 +326,9 @@
         <span class="n">runtime</span> <span class="o">=</span> <span class="mi">1234567890</span>
         <span class="n">additional_info</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="n">stdout_</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">):</span>
-            <span class="k">if</span> <span class="n">line</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;Result of this algorithm run:&quot;</span><span class="p">)</span> <span class="ow">or</span> <span class="n">line</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;Result for ParamILS&quot;</span><span class="p">)</span> <span class="ow">or</span> <span class="n">line</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;Result for SMAC&quot;</span><span class="p">):</span>
+            <span class="k">if</span> <span class="n">line</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;Result of this algorithm run:&quot;</span><span class="p">)</span> <span class="ow">or</span> \
+                    <span class="n">line</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;Result for ParamILS&quot;</span><span class="p">)</span> <span class="ow">or</span> \
+                    <span class="n">line</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;Result for SMAC&quot;</span><span class="p">):</span>
                 <span class="n">fields</span> <span class="o">=</span> <span class="n">line</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;:&quot;</span><span class="p">)[</span><span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;,&quot;</span><span class="p">)</span>
                 <span class="n">fields</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="o">.</span><span class="n">strip</span><span class="p">(</span><span class="s2">&quot; &quot;</span><span class="p">),</span> <span class="n">fields</span><span class="p">))</span>
                 <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">fields</span><span class="p">)</span> <span class="o">==</span> <span class="mi">5</span><span class="p">:</span>
