--- a/dev/_modules/smac/utils/merge_foreign_data.html
+++ b/dev/_modules/smac/utils/merge_foreign_data.html
@@ -253,36 +253,36 @@
 
 <span class="kn">import</span> <span class="nn">typing</span>
 
+
 <div class="viewcode-block" id="merge_foreign_data_from_file"><a class="viewcode-back" href="../../../apidoc/smac.utils.merge_foreign_data.html#smac.utils.merge_foreign_data.merge_foreign_data_from_file">[docs]</a><span class="k">def</span> <span class="nf">merge_foreign_data_from_file</span><span class="p">(</span><span class="n">scenario</span><span class="p">:</span> <span class="n">Scenario</span><span class="p">,</span>
                                  <span class="n">runhistory</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span>
                                  <span class="n">in_scenario_fn_list</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span>
                                  <span class="n">in_runhistory_fn_list</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span>
                                  <span class="n">cs</span><span class="p">:</span> <span class="n">ConfigurationSpace</span><span class="p">,</span>
                                  <span class="n">aggregate_func</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Callable</span> <span class="o">=</span> <span class="n">average_cost</span><span class="p">):</span>
-    <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">        extend &lt;scenario&gt; and &lt;runhistory&gt; with runhistory data from another &lt;in_scenario&gt;</span>
-<span class="sd">        assuming the same pcs, feature space, but different instances</span>
+    <span class="sd">&quot;&quot;&quot;Extend &lt;scenario&gt; and &lt;runhistory&gt; with runhistory data from another</span>
+<span class="sd">    &lt;in_scenario&gt; assuming the same pcs, feature space, but different instances</span>
 
-<span class="sd">        Arguments</span>
-<span class="sd">        ---------</span>
-<span class="sd">        scenario: Scenario</span>
-<span class="sd">            original scenario -- feature dictionary will be extended</span>
-<span class="sd">        runhistory: RunHistory</span>
-<span class="sd">            original runhistory -- will be extended by further data points</span>
-<span class="sd">        in_scenario_fn_list: typing.List[str]</span>
-<span class="sd">            input scenario file names</span>
-<span class="sd">        in_runhistory_fn_list: typing.List[str]</span>
-<span class="sd">            list filenames of runhistory dumps</span>
-<span class="sd">        cs: ConfigurationSpace</span>
-<span class="sd">            parameter configuration space to read runhistory from file</span>
-<span class="sd">        aggregate_func: typing.Callable</span>
-<span class="sd">            function to aggregate performance of a configuratoion across instances</span>
+<span class="sd">    Parameters</span>
+<span class="sd">    ---------</span>
+<span class="sd">    scenario: Scenario</span>
+<span class="sd">        original scenario -- feature dictionary will be extended</span>
+<span class="sd">    runhistory: RunHistory</span>
+<span class="sd">        original runhistory -- will be extended by further data points</span>
+<span class="sd">    in_scenario_fn_list: typing.List[str]</span>
+<span class="sd">        input scenario file names</span>
+<span class="sd">    in_runhistory_fn_list: typing.List[str]</span>
+<span class="sd">        list filenames of runhistory dumps</span>
+<span class="sd">    cs: ConfigurationSpace</span>
+<span class="sd">        parameter configuration space to read runhistory from file</span>
+<span class="sd">    aggregate_func: typing.Callable</span>
+<span class="sd">        function to aggregate performance of a configuratoion across instances</span>
 
-<span class="sd">        Returns</span>
-<span class="sd">        -------</span>
-<span class="sd">        scenario: Scenario</span>
-<span class="sd">        runhistory: Runhistory</span>
-<span class="sd">    &#39;&#39;&#39;</span>
+<span class="sd">    Returns</span>
+<span class="sd">    -------</span>
+<span class="sd">    scenario: Scenario</span>
+<span class="sd">    runhistory: Runhistory</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">if</span> <span class="ow">not</span> <span class="n">in_scenario_fn_list</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;To read warmstart data from previous runhistories, the corresponding scenarios are required. Use option --warmstart_scenario&quot;</span><span class="p">)</span>
@@ -300,27 +300,25 @@
                        <span class="n">runhistory</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span>
                        <span class="n">in_scenario_list</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="n">Scenario</span><span class="p">],</span>
                        <span class="n">in_runhistory_list</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="n">RunHistory</span><span class="p">]):</span>
-    <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">        extend &lt;scenario&gt; and &lt;runhistory&gt; with runhistory data from another &lt;in_scenario&gt;</span>
-<span class="sd">        assuming the same pcs, feature space, but different instances</span>
+    <span class="sd">&quot;&quot;&quot;Extend &lt;scenario&gt; and &lt;runhistory&gt; with runhistory data from another</span>
+<span class="sd">    &lt;in_scenario&gt; assuming the same pcs, feature space, but different instances</span>
 
-<span class="sd">        Arguments</span>
-<span class="sd">        ---------</span>
-<span class="sd">        scenario: Scenario</span>
-<span class="sd">            original scenario -- feature dictionary will be extended</span>
-<span class="sd">        runhistory: RunHistory</span>
-<span class="sd">            original runhistory -- will be extended by further data points</span>
-<span class="sd">        in_scenario_list: typing.List[Scenario]</span>
-<span class="sd">            input scenario</span>
-<span class="sd">        in_runhistory_list: typing.List[RunHistory]</span>
-<span class="sd">            list of runhistories wrt &lt;in_scenario&gt;</span>
+<span class="sd">    Parameters</span>
+<span class="sd">    ---------</span>
+<span class="sd">    scenario: Scenario</span>
+<span class="sd">        original scenario -- feature dictionary will be extended</span>
+<span class="sd">    runhistory: RunHistory</span>
+<span class="sd">        original runhistory -- will be extended by further data points</span>
+<span class="sd">    in_scenario_list: typing.List[Scenario]</span>
+<span class="sd">        input scenario</span>
+<span class="sd">    in_runhistory_list: typing.List[RunHistory]</span>
+<span class="sd">        list of runhistories wrt &lt;in_scenario&gt;</span>
 
-<span class="sd">        Returns</span>
-<span class="sd">        -------</span>
-<span class="sd">        scenario: Scenario</span>
-<span class="sd">        runhistory: Runhistory</span>
-<span class="sd">    &#39;&#39;&#39;</span>
-
+<span class="sd">    Returns</span>
+<span class="sd">    -------</span>
+<span class="sd">    scenario: Scenario</span>
+<span class="sd">    runhistory: Runhistory</span>
+<span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># add further instance features</span>
     <span class="k">for</span> <span class="n">in_scenario</span> <span class="ow">in</span> <span class="n">in_scenario_list</span><span class="p">:</span>
         <span class="k">if</span> <span class="n">scenario</span><span class="o">.</span><span class="n">n_features</span> <span class="o">!=</span> <span class="n">in_scenario</span><span class="o">.</span><span class="n">n_features</span><span class="p">:</span>
